✨ API | Endpoint Logo ok
