# routes/api-v1.php
@@ -5,6 +5,7 @@ use App\Models\admin\AboutCmpj;
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\V1\PostApiController;
 use App\Http\Controllers\Api\V1\AboutApiController;
+use App\Http\Controllers\Api\V1\LogosApiController;
 use App\Http\Controllers\Api\V1\CategoryApiController;
 use App\Http\Controllers\Api\V1\ThematicApiController;
 use App\Http\Controllers\Api\V1\AboutCmpjApiController;
@@ -33,6 +34,6 @@ Route::group(['middleware' => 'token.api.custom'], function () {
     Route::apiResource('sobre-observatorio', AboutObservatoryApiController::class)->names('about.observatory');
     Route::apiResource('sobre-cmpj', AboutCmpjApiController::class)->names('about.cmpj');
     Route::apiResource('directiva', DirectiveApiController::class)->names('directive');
-    // Route::apiResource('logos', CategoryApiController::class)->names('logos');
+    Route::apiResource('logos', LogosApiController::class)->names('logos');
     // Route::apiResource('politica-juventud', CategoryApiController::class)->names('youth-policy');
 });
